--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,11 @@ dependencies:
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
   firebase_storage: ^11.6.5
-
+  syncfusion_flutter_calendar: ^21.2.3
+  flutter_local_notifications: ^16.3.0
+  awesome_notifications: ^0.8.3
+  awesome_notifications_core: ^0.9.0 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
