--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,16 @@ dependencies:
   flutter_local_notifications: ^16.3.0
   awesome_notifications: ^0.8.3
   awesome_notifications_core: ^0.9.0 
+  location: ^5.0.3
+  rxdart: ^0.27.2
+  intl: 0.19.0
+  http: ^1.2.0
+  google_maps_flutter: ^2.5.3
+  url_launcher: ^6.2.2
+  geolocator: ^10.1.0
+  permission_handler: ^11.1.0
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
   
 dev_dependencies:
   flutter_test:
